--- a/form/src/main/res/layout/form_element_switch.xml
+++ b/form/src/main/res/layout/form_element_switch.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackground"
         android:orientation="horizontal">
 
         <android.support.v7.widget.AppCompatTextView
