feat: configure local image saving
(cherry picked from commit 8333d27089caaba5e01eff28cc123a440c7b1a87)

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,5 +2,5 @@
 <paths>
     <external-path
         name="my_images"
-        path="Android/data/com.k2.testcompanycamintegration/files/Pictures" />
+        path="Android/data/com.gemini.energy/files/Pictures" />
 </paths>
