feat: add manual companycam login/logout in settings
(cherry picked from commit aaed77ed2f98bb3425e0173ae0e0cb2637bd0bc3)

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -7,6 +7,10 @@
             android:key="@string/drop_box_auth"
             android:summary="Access your DropBox Account via OAuth." />
 
+        <Preference android:title="@string/companyCamAuthPreferenceTitle"
+            android:key="@string/companyCamAuthPreferenceKey"
+            android:summary="@string/companyCamAuthPreferenceSummary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
